# netflix-dataset-analysis

./: .gitignore  README.md  pyproject.toml
src/: projet.ipynb
src/.ipynb_checkpoints/: projet-checkpoint.ipynb
